# CRS_GS_dev

./: .gitignore  README.md  run_gs_app_c.sh  run_gs_app_python.sh
FC/RpiPico/: Dockerfile  Makefile
FC/RpiPico/Lora_dev/: CMakeLists.txt
FC/RpiPico/Lora_dev/Sensor_board/: CMakeLists.txt
FC/RpiPico/Lora_dev/Sensor_board/.VSCodeCounter/2024-05-15_14-50-50/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
FC/RpiPico/Lora_dev/Sensor_board/include/: GFX.h  GFX.hpp  GFX_wrapper.h  SSD1309.h  SSD1309.hpp  config.h  font.hpp  sx1280_spi.h
FC/RpiPico/Lora_dev/Sensor_board/src/: GFX.c  GFX.cpp  GFX_wrapper.cpp  SSD1309.c  SSD1309.cpp  common.c  main.c  reciever.c  sx1280_spi.c  transciever.c
FC/RpiPico/Lora_dev/spd/: CMakeLists.txt
FC/RpiPico/Lora_dev/spd/src/: main.c
FC/RpiPico/Lora_dev/spi/: CMakeLists.txt
FC/RpiPico/Lora_dev/spi/include/: sx1280_spi.h
FC/RpiPico/Lora_dev/spi/src/: main_rx.c  main_tx.c  sx1280_old.c  sx1280_spi.c
FC/RpiPico/Lora_dev/uart/: CMakeLists.txt
FC/RpiPico/Lora_dev/uart/include/: sx1280_uart.h
FC/RpiPico/Lora_dev/uart/src/: main_rx.c  main_tx.c  sx1280_uart.c  testing_rx.c  testing_tx.c
GS_Case/: fastApi.json  plot.py  requirements.txt  run_gs_app_c.sh  run_gs_app_python.sh  start_GS.sh  stop_GS.sh
GS_Case/app/: main.py
GS_Case/app_c/: CMakeLists.txt
GS_Case/app_c/bootup/: CMakeLists.txt  main.c
GS_Case/app_c/spi/: CMakeLists.txt
GS_Case/app_c/spi/include/: cansat_panel_config.h  sx1280_spi.h
GS_Case/app_c/spi/src/: main.c  sx1280_spi.c
GS_Panels/: CMakeLists.txt  Dockerfile  Makefile  README.md
GS_Panels/demo/CAN_demo/: CMakeLists.txt
GS_Panels/demo/CAN_demo/src/: CAN_demo_rx.c  CAN_demo_tx.c
GS_Panels/libs/: CMakeLists.txt  makefile
GS_Panels/libs/can/: CMakeLists.txt
GS_Panels/libs/can/include/: can.h  can2040.h  can_data_structs.h  can_message.h
GS_Panels/libs/can/src/: can.c  can2040.c
GS_Panels/libs/ws2812/: CMakeLists.txt
GS_Panels/libs/ws2812/include/: ws2812.h
GS_Panels/libs/ws2812/src/: ws2812.c
GS_Panels/panels/: CMakeLists.txt  cansat_panel.uf2
GS_Panels/panels/cansat/: CMakeLists.txt
GS_Panels/panels/cansat/include/: cansat_panel_config.h
GS_Panels/panels/cansat/src/: main.c
RPI/: Dockerfile  Makefile  requirements.txt  sx1280_rx.py  sx1280_uart.py
RPI/SherpaWebApp/: index.html  main.js  visuals.js
RPI/app/: main.py  sx1280_uart.py
RPI/app_c/: CMakeLists.txt
RPI/app_c/spi/: CMakeLists.txt
RPI/app_c/spi/include/: can_data_structs.h  can_message.h  cansat_panel_config.h  sx1280_spi.h
RPI/app_c/spi/src/: main.c  main_rx.c  sx1280_spi.c  testing_rx.c
RPI/app_c/uart/: CMakeLists.txt
RPI/app_c/uart/include/: sx1280_uart.h
RPI/app_c/uart/src/: main_rx.c  sx1280_uart.c  testing_rx.c
